atualizações da aula

--- a/siteEPIs/epis/templates/colaboradores.html
+++ b/siteEPIs/epis/templates/colaboradores.html
@@ -2,7 +2,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <body>
-
+    <style>
+        .page-title {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+    </style>
     <main>
         <h2 class="page-title">Gerenciamento de Colaboradores</h2>
         
