--- a/siteEPIs/epis/templates/avisos.html
+++ b/siteEPIs/epis/templates/avisos.html
@@ -27,6 +27,11 @@
             width: 80%;
             margin: 20px auto;
         }
+
+        .page-title {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
     </style>
 </head>
 <body>
