--- a/siteEPIs/epis/templates/entrega.html
+++ b/siteEPIs/epis/templates/entrega.html
@@ -3,7 +3,12 @@
 <html lang="pt-BR">
     
 <body>
-   
+    <style>
+        .page-title {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+    </style>
     <main>
         <h2 class="page-title">Registro de Entrega de EPIs</h2>
 
