--- a/siteEPIs/epis/templates/epis.html
+++ b/siteEPIs/epis/templates/epis.html
@@ -3,6 +3,12 @@
 <html lang="pt-BR">
     
 <body>
+    <style>
+        .page-title {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+    </style>
       <main>
         <h2 class="page-title">Gerenciamento de EPIs</h2>
 
