--- a/siteEPIs/epis/templates/partials/header.html
+++ b/siteEPIs/epis/templates/partials/header.html
@@ -7,9 +7,14 @@
     <style>
         /* Estilos globais */
         body {
-            font-family: Arial, sans-serif !important;
+            font-family: 'Segoe UI', Arial, sans-serif !important;
             margin: 0 !important;
             padding: 0 !important;
+
+            .page-title {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
         }
         
         /* Estilos específicos do cabeçalho */
